--- a/src/app/components/recipe-home-card/recipe.component.html
+++ b/src/app/components/recipe-home-card/recipe.component.html
@@ -1,6 +1,6 @@
 <div class="recipe-card" [ngStyle]="user.isLogged ? {'margin-top':'120px'}:{}" (window:scroll)="onScrollEvent($event)">
         <div *ngFor="let item of fetchedData" class="img-container">
-                <a [routerLink]="['recipeDetails', item.recipeId]" ><img [src]="item['recipe-img']" alt="" loading="lazy"></a>
+                <a [routerLink]="['/recipeDetails', item.recipeId]" ><img [src]="item['recipe-img']" alt="" loading="lazy"></a>
                 <p  class="recipe-name">{{item.title}}
                         
                 </p>
