--- a/src/app/components/recipe-home-card/recipe.component.scss
+++ b/src/app/components/recipe-home-card/recipe.component.scss
@@ -44,8 +44,8 @@ $font-size: calc(12px + 0.52634vw);
         width: 35%;
         height: auto;
         border-top-left-radius:8px ;
-        border-top-right-radius: 200px;
-        border-bottom-right-radius: 200px;
+        border-top-left-radius: 200px;
+        border-bottom-left-radius: 200px;
         padding: 2%;
         div {
             display: flex;
