--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,15 +7,10 @@ body {
     box-sizing: border-box;
     margin: 0;
     background-color: rgba(112, 163, 112, 0.233);
-    // font-family: 'Heebo', sans-serif;
-    // font-family: 'Sofia Sans Extra Condensed', sans-serif;
-    // letter-spacing: 0.5px;       
-    
-    // font-family: 'Open Sans', sans-serif;
-    // // font-family: 'Poppins', sans-serif;
+      
     font-family: 'Heebo', sans-serif;
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Poppins', sans-serif;
+   
+    // font-weight: 500;
     font-weight: 400;
 }
 
