--- a/src/app/components/add-recipe/add-recipe.component.html
+++ b/src/app/components/add-recipe/add-recipe.component.html
@@ -3,9 +3,9 @@
     <div class="form-wrapper">
       <form [formGroup]="addRecipe" (ngSubmit)="onSubmit()" >
         <div class="container-outline add-steps-button">
-          <label for="">Recipe name</label>
+          <label for="">שם המתכון</label>
           <input type="text" name="title" formControlName="title" />
-          <label  class="pic-label " for="inputTag">Upload Image: {{fileName ? fileName :''}}
+          <label  class="pic-label " for="inputTag">הוסף תמונה: {{fileName ? fileName :''}}
             <svg width="25px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 121.86 122.88" style="enable-background:new 0 0 121.86 122.88" xml:space="preserve"><style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><g><path class="st0" d="M72.09,18.72h42.37c2.05,0,3.89,0.84,5.22,2.18c1.34,1.34,2.18,3.2,2.18,5.22v89.36 c0,2.05-0.84,3.89-2.18,5.22c-1.34,1.34-3.2,2.18-5.22,2.18H24.48c-2.05,0-3.89-0.84-5.22-2.18c-1.34-1.34-2.18-3.2-2.18-5.22 V71.46c2.47,1,5.05,1.78,7.72,2.29v20.28h0.03l0,0C37.72,81.7,46.26,75.61,59.08,65.2c0.05,0.05,0.1,0.1,0.15,0.15 c0.03,0.03,0.03,0.06,0.06,0.06l26.82,31.73l4.1-25.24c0.28-1.62,1.8-2.73,3.42-2.45c0.62,0.09,1.18,0.4,1.62,0.81l18.82,19.77 V27.91c0-0.4-0.16-0.75-0.44-0.99c-0.25-0.25-0.62-0.44-0.99-0.44H74.05C73.64,23.8,72.98,21.21,72.09,18.72L72.09,18.72z M32.79,0 C50.9,0,65.58,14.68,65.58,32.79c0,18.11-14.68,32.79-32.79,32.79C14.68,65.58,0,50.9,0,32.79C0,14.68,14.68,0,32.79,0L32.79,0z M15.37,33.37h11.04v15.76h12.45V33.37h11.36L32.8,16.44L15.37,33.37L15.37,33.37L15.37,33.37z M94.27,35.66 c2.95,0,5.66,1.21,7.58,3.14c1.96,1.96,3.14,4.63,3.14,7.59c0,2.95-1.21,5.66-3.14,7.58c-1.96,1.96-4.63,3.14-7.58,3.14 c-2.95,0-5.66-1.21-7.59-3.14c-1.96-1.96-3.14-4.63-3.14-7.58c0-2.95,1.21-5.65,3.14-7.59C88.65,36.84,91.32,35.66,94.27,35.66 L94.27,35.66L94.27,35.66z"/></g></svg>
           </label >
           <input 
@@ -17,9 +17,9 @@
             (change)="readUrl($event)"
           />
           <div class="cooking-preperation-time">
-            <label for="">Preperation time</label>
+            <label for="">זמן הכנה</label>
             <input type="number" formControlName="preperationTime">
-            <label for="" class="">Cooking Time</label>
+            <label for="" class="">זמן בישול</label>
             <input type="number" class="" name="cookingTime" formControlName="cookingTime" />
             
           </div>
@@ -27,25 +27,28 @@
         </div>
         
         <div class="add-ingredient-button-container container-outline">
-          <label for="">Ingredient</label>
+          <label for="">רכיב</label>
           <input
             type="text"
             name="ingredient"
             formControlName="ingredient"
             focus
-            placeholder="Please fill ingredients here..."
+            placeholder="אנא הוסף שם רכיב כאן..."
           />
           <div class="quantity-unit">
-            <label for="">Quantity</label>
+            <label for="">כמות</label>
             <input type="number" formControlName="quantity" min="1" placeholder="min 1">
-            <label for="">Unit</label>
+            <label for="">יחידות</label>
             <select type="number" formControlName="unit">
-              <option value="spoon">Spoons</option>
-              <option value="grams">Grams</option>
-              <option value="Kilograms">Kilograms</option>
-              <option value="Miligrams">Miligrams</option>
-              <option value="Liters">Liters</option>
-              <option value="Mililiters">Mililiters</option>
+              <option value="יחידות">יחידות</option>
+              <option value="כפיות">כפיות</option>
+              <option value="כפות">כפות</option>
+              <option value="כוסות">כוסות</option>
+              <option value="מיליגרם">מיליגרם</option>
+              <option value="גרם">גרם</option>
+              <option value="קילוגרם">קילוגרם</option>
+              <option value="ליטר">ליטר</option>
+              <option value="מיליליטר">מיליליטר</option>
               
             </select>
           </div>
@@ -55,14 +58,14 @@
           [disabled]="!addRecipe.valid"
           [ngStyle]="{'background-color': addRecipe.valid ? 'rgba(81, 151, 81, 0.514)' : 'rgba(168, 46, 46, 0.445)' }" 
           (click)="addIngredient()">
-            Add ingredient
+            הוסף רכיב
           </button>
-          <small *ngIf="!addRecipe.valid">please fill the Title, Image, and Cooking time</small>
+          <small *ngIf="!addRecipe.valid">אנא, הוסף שם מתכון, תמונה וזמן הכנה</small>
           
           <!-- <p>{{ addRecipe.valid | json }}</p> -->
         </div>
         <div class="add-steps-button container-outline" >
-          <label for="">Cooking steps</label>
+          <label for="">צעדי בישול</label>
           <textarea
             wrap="soft"
             name=""
@@ -76,7 +79,7 @@
             [disabled]="!addRecipe.controls['steps'].value"
             type="button" (click)="addStep()" 
             [ngStyle]="{'background-color': addRecipe.controls['steps'].value ? 'rgba(81, 151, 81, 0.514)' : 'rgba(168, 46, 46, 0.445)' }">
-            Add steps
+            הוסף צעד
           </button>
         </div>
         <!-- <p *ngIf="stepsArray.length === 0">no steps added</p> -->
@@ -86,7 +89,7 @@
           class="button-hover submit-button" 
           [disabled]="stepsArray.length == 0 || ingredients.length == 0" 
           [ngStyle]="{'background-color': stepsArray.length != 0 && ingredients.length != 0 ? 'rgba(81, 151, 81, 0.514)' : 'rgba(168, 46, 46, 0.445)' }">
-          Submit recipe
+          סיום
         </button>
       </form>
     </div>
@@ -94,7 +97,7 @@
   <!-- IMPORTANT ----------------- Preview Screen on the right ------------------------ -->
   <div class="right-container" style="padding:20px">
     <!-- <p>{{ addRecipe.value | json }}</p> -->
-    <h1>Preview:</h1>
+    <h1>הדגמת תצוגה:</h1>
     
     <h2 *ngIf="addRecipe.get('title').value">
       {{ addRecipe.get("title").value }}
@@ -102,14 +105,14 @@
     <table *ngIf="addRecipe.get('cookingTime').value && addRecipe.get('preperationTime').value" class="preview-table">
       <thead>
         <tr>
-          <td>preperation time</td>
-          <td>Cooking time</td>
+          <td>זמן הכנה</td>
+          <td>זמן בישול</td>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>{{addRecipe.get('preperationTime').value}} minutes</td>
-          <td>{{ addRecipe.get("cookingTime").value }} minutes</td>
+          <td>{{addRecipe.get('preperationTime').value}} דקות</td>
+          <td>{{ addRecipe.get("cookingTime").value }} דקות</td>
         </tr>
       </tbody>
     </table>
@@ -128,7 +131,7 @@
                 <td>{{ item.ingredient}}:</td>
                 <td>{{item.quantity}}</td>
                 <td>{{item.unit}}</td>
-                <td><button class="delete-btn" (click)="deleteItem(i)">delete</button></td>
+                <td><button class="delete-btn" (click)="deleteItem(i)" >מחק </button></td>
               </tr>
             </table>
              
@@ -137,7 +140,7 @@
       </div>
     </div>
     <div class="cooking-steps-wrapper" *ngFor="let item of stepsArray; index as i">
-      step {{i + 1}}:
+      שלב הכנה {{i + 1}}:
       <p class="cooking-steps" > <button class="steps-delete-btn" (click)="deleteStepItem(i)" >delete</button> 
         
          {{ item }} 
