--- a/src/app/components/recipe-details/recipe-details.component.scss
+++ b/src/app/components/recipe-details/recipe-details.component.scss
@@ -15,7 +15,8 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
         margin:0px;
         
         .user-name {     
-            font-weight: bold;
+            margin-right: 25px;
+            font-weight: 400;
             font-size: calc(26px + 0.5243vw);
             
         }
@@ -39,7 +40,7 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
                     text-align: center;
                 }
 
-                td:last-child {
+                td:first-child {
                     border-right: 0px;
                 }
             }
@@ -56,7 +57,7 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
                    
                 }
 
-                td:last-child {
+                td:first-child {
                     border-right: 0px;
                 }
             }
@@ -67,26 +68,35 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
         flex-direction: row;
         border-bottom: $border;
         padding-bottom: 20px;
+        width: 100%;
+        
         
         .left-container {
             width: 50%;
+            height: 500px;
             img{
                 border-radius: 10px;
                 box-shadow: -5px 5px 5px 0 grey;
                 width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
             }
         }
         
         // TODO: Fix image sizing issues
         .right-container {
-            margin-left: 20px;
+            margin-right: 20px;
             width: 50%;
             // background-color: rgba(245, 245, 245, 0.63);
             border-radius: 10px;
 
             table {
                 td{
+                    width: 150px;
                     text-align: center;
+                    border-bottom: 1px solid rgba(128, 128, 128, 0.212);
+                    border-collapse: collapse;
                 }
             }
                 // ul{
