--- a/src/app/components/navbarComponents/navbar/navbar.component.scss
+++ b/src/app/components/navbarComponents/navbar/navbar.component.scss
@@ -120,7 +120,10 @@ nav {
             }
 
             .logout {
-                margin-right: 12px;
+                padding-left: 40px;
+                padding-right: 40px;
+                // background-color: red;
+                
                 cursor: pointer;
             }
             
