likes added spider finished

--- a/src/app/components/recipesComponents/add-recipe/add-recipe.component.html
+++ b/src/app/components/recipesComponents/add-recipe/add-recipe.component.html
@@ -40,13 +40,13 @@
             <input type="number" formControlName="quantity" min="1" placeholder="min 1">
             <label for="">יחידות</label>
             <select type="number" formControlName="unit">
-              <option value="יחידות">יחידות</option>
+              <option value="יח">יחידות</option>
               <option value="כפיות">כפיות</option>
               <option value="כפות">כפות</option>
               <option value="כוסות">כוסות</option>
-              <option value="מיליגרם">מיליגרם</option>
+              <option value="מ&quot;ל">מיליגרם</option>
               <option value="גרם">גרם</option>
-              <option value="קילוגרם">קילוגרם</option>
+              <option value="ק&quot;ג">קילוגרם</option>
               <option value="ליטר">ליטר</option>
               <option value="מיליליטר">מיליליטר</option>
               
