--- a/src/app/components/recipesComponents/add-recipe/add-recipe.component.scss
+++ b/src/app/components/recipesComponents/add-recipe/add-recipe.component.scss
@@ -244,7 +244,7 @@ $random: #d4d5d6;
                 
                 ul{
                     width: 100%;
-                    list-style-image: url(../../../assets/images/ingredients-svgrepo-com.svg);
+                    list-style-image: url(../../../../assets/images/ingredients-svgrepo-com.svg);
                     line-break: loose;
                     li {
                         border-bottom: 1px solid rgba(128, 128, 128, 0.411);
