select work in progress

--- a/src/app/components/recipesComponents/add-recipe/add-recipe.component.html
+++ b/src/app/components/recipesComponents/add-recipe/add-recipe.component.html
@@ -39,7 +39,7 @@
             <label for="">כמות</label>
             <input type="number" formControlName="quantity" min="1" placeholder="min 1">
             <label for="">יחידות</label>
-            <select type="number" formControlName="unit">
+            <select class="units" tabindex="1" type="number" formControlName="unit">
               <option value="יח">יחידות</option>
               <option value="כפיות">כפיות</option>
               <option value="כפות">כפות</option>
