likes in progress

--- a/src/app/components/likesComponents/like-btn/like-btn.component.html
+++ b/src/app/components/likesComponents/like-btn/like-btn.component.html
@@ -1,3 +1,3 @@
-<div>
+<div *ngIf="user.isLogged">
     <button (click)="addLike()">לייק<img src="../../../../assets/images/heart-15.svg"> </button>
 </div>
