--- a/src/app/components/recipesComponents/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipesComponents/recipe-details/recipe-details.component.html
@@ -20,6 +20,7 @@
             </tbody>
         </table>
         <app-like-btn [recipeId]="recipeDetails['recipeId']" [userId]=""></app-like-btn>
+        <app-paypal-button></app-paypal-button>
     </div>
     
     
