--- a/src/app/components/recipesComponents/recipe-home-card/recipe.component.html
+++ b/src/app/components/recipesComponents/recipe-home-card/recipe.component.html
@@ -1,13 +1,17 @@
 <div class="recipe-card"  (window:scroll)="onScrollEvent($event)">
         <div *ngFor="let item of fetchedData" class="img-container">
                 <a [routerLink]="['/recipeDetails', item.recipeId]" ><img [src]="item['recipe-img']" alt="" loading="lazy"></a>
-                <p  class="recipe-name">{{item.title}} 
-                        <app-likes-display [likesCount]="item.likesCount"></app-likes-display> 
-                </p>
+                <div title="שם המתכון" class="recipe-title-card" >
+                        <p class="recipe-name">
+                                {{item.title}} 
+                        </p>
+                        <app-likes-display class="likes-display" [likesCount]="item.likesCount"></app-likes-display> 
+                </div>
+                
                 <div class="name-container">
                         
                         <div>
-                                <p class="user-name">by {{item.userFirstName}} {{item.userlastName}}</p>
+                                <p title="שם יוצר המתכון" class="user-name">by {{item.userFirstName}} {{item.userlastName}}</p>
                                 <img class="profile-img" [src]="item['profile-img']" alt="" loading="lazy">
                         </div>
                 </div>
