--- a/src/app/components/recipesComponents/recipe-home-card/recipe.component.scss
+++ b/src/app/components/recipesComponents/recipe-home-card/recipe.component.scss
@@ -19,24 +19,38 @@ $font-size: calc(12px + 0.52634vw);
         
     }
     
-    .recipe-name {
-        border:10px;
+    .recipe-title-card {
+        background-color: rgba(245, 245, 245, 0.767);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 70px;
         position: absolute;
-        text-align: center;
-        font-size: calc(12px + 0.52634vw);
-        font-weight: 500;
-        color: rgb(7, 59, 7);
-        // font-family: Verdana, Geneva, Tahoma, sans-serif;
-        background-color: rgba(245, 245, 245, 0.479);
-        width: auto;
-        padding: 20px;
-        height: 30px;
-        // top: 0;
         bottom: 0;
         left: 0;
         right:0;
         margin: auto;
+        border-bottom-right-radius: 8px;
+        border-bottom-left-radius: 8px;
+        // text-shadow: 1px 1px 1px grey;
+        .recipe-name {
+            margin-right: 20px;
+            border:10px;
+            text-align: center;
+            font-size: calc(12px + 0.52634vw);
+            font-weight: 500;
+            color: rgb(7, 59, 7);
+            width: auto;     
+            height: 30px;
+        }
+        .likes-display {
+            font-size: calc(12px + 0.52634vw);
+            font-weight: 500;
+            color: rgb(7, 59, 7);
+        }
     }
+    
     .name-container {
         position: absolute;
         top:10px;
