--- a/src/app/components/recipesComponents/recipe-details/recipe-details.component.scss
+++ b/src/app/components/recipesComponents/recipe-details/recipe-details.component.scss
@@ -24,6 +24,7 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
     .cooking-time-container{
         display: flex;
         flex-direction: row;
+        margin-bottom: 20px;
         .preview-table {
             margin-bottom: 20px;
             // border: 1px solid rgba(128, 128, 128, 0.363);
