--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-navbar></app-navbar>
+<app-navbar [isLogged]="isLogged" [userData]="userShortData"></app-navbar>
 
 
 <router-outlet></router-outlet>
