--- a/src/app/components/recipesComponents/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipesComponents/recipe-details/recipe-details.component.html
@@ -41,9 +41,9 @@
                 </thead>
                 <tbody >
                         <tr *ngFor="let item of ingredients">
-                            <td>{{item['ingredient']}}</td>
-                            <td>{{item['quantity']}}</td>
-                            <td>{{item['unit']}}</td>
+                            <td>{{item['ingredient'] | htmlDecoder}}</td>
+                            <td>{{item['quantity'] }}</td>
+                            <td>{{item['unit'] | htmlDecoder}}</td>
                         </tr>     
                 </tbody>
             </table>
@@ -59,7 +59,7 @@
         
     </div>
     <div class="steps-container" >
-        <p *ngFor="let step of cookingSteps; index as i"><u>שלב הכנה  {{i + 1}}</u><br> {{ step}}</p>
+        <p *ngFor="let step of cookingSteps; index as i"><u>שלב הכנה  {{i + 1}}</u><br> {{ step | htmlDecoder}}</p>
     </div>
     <app-prices-table [ingredients]="ingredients"></app-prices-table>
     
