--- a/src/app/components/navbarComponents/navbar/navbar.component.scss
+++ b/src/app/components/navbarComponents/navbar/navbar.component.scss
@@ -4,6 +4,19 @@ $borderColor: rgb(63, 135, 166,0.575);
 .active-link{
     background-color:rgba(60, 128, 66, 0.548); 
 }
+.settings-btn{
+    padding: 0px !important;
+    padding-top:3.0% !important;
+    padding-bottom:3.0% !important;
+    
+}
+svg{
+    height: calc(15px + 0.56234vw);
+    padding:0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    fill:$textcolor
+}
 nav {
     background-color: $backgroundColor;
     position: fixed;
@@ -121,7 +134,7 @@ nav {
 
             .logout {
                 padding-left: 40px;
-                padding-right: 40px;
+                padding-right: 20px;
                 // background-color: red;
                 
                 cursor: pointer;
