--- a/src/app/components/navbarComponents/navbar/navbar.component.scss
+++ b/src/app/components/navbarComponents/navbar/navbar.component.scss
@@ -4,12 +4,7 @@ $borderColor: rgb(63, 135, 166,0.575);
 .active-link{
     background-color:rgba(60, 128, 66, 0.548); 
 }
-.settings-btn{
-    padding: 0px !important;
-    padding-top:3.0% !important;
-    padding-bottom:3.0% !important;
-    
-}
+
 svg{
     height: calc(15px + 0.56234vw);
     padding:0px;
@@ -178,28 +173,49 @@ nav {
         }
     }
 
-    .member-nav {        
-      
-        list-style: none;
-        li:first-child {
-            // margin-left: 20px;
-        }
-        li{
-            list-style-type: none;
-            padding:5px;        
-        }
+    .member-nav {      
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        list-style: none;  
+        justify-content: space-between;
 
-        a{
+        .settings-btn{
+            // padding: 2px !important;
+            padding-top: 4px !important;
+            padding-bottom: 0px !important;
             padding-left: 20px;
             padding-right: 20px;
-            text-decoration: none;
-            cursor: pointer;
-            color: $textcolor
+        }
+        .right-member-nav {
+            display: flex;
+            flex-direction: row;
+            li:first-child {
+                // margin-left: 20px;
+            }
+            li{
+                list-style-type: none;
+                padding:5px;        
+            }
+    
+            a{
+                padding-left: 20px;
+                padding-right: 20px;
+                text-decoration: none;
+                cursor: pointer;
+                color: $textcolor
+            }
+    
+            a:visited{
+                color: $textcolor;
+            }
         }
 
-        a:visited{
-            color: $textcolor;
+        .left-member-nav{
+
         }
+        
+        
         
     }
     
