--- a/src/app/components/recipesComponents/recipe-details/recipe-details.component.scss
+++ b/src/app/components/recipesComponents/recipe-details/recipe-details.component.scss
@@ -25,47 +25,45 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
         display: flex;
         flex-direction: row;
         margin-bottom: 20px;
-        .preview-table {
-            margin-bottom: 20px;
-            // border: 1px solid rgba(128, 128, 128, 0.363);
-            border-collapse: collapse;
-            margin-top: 10px;
-            max-width: 600px;
-            font-size: calc(13px + 0.5234vw);
-            thead {                
-                tr {
-                    td {
-                        margin-left: 20px;
-                        margin-right: 20px;
-                        padding: 5px;
-                        border-right:2px solid rgba(128, 128, 128, 0.363);
-                        // border-left:1px solid rgba(128, 128, 128, 0.363);
-                        text-align: center;
-                    }
-    
-                    td:first-child {
-                        border-right: 0px;
-                    }
-                }
-            }
-            tbody {
-                tr{
-                    td{
-                        border-right:2px solid rgba(128, 128, 128, 0.363) ;
-                        // border-left:1px solid rgba(128, 128, 128, 0.363) ;
-                        width: 150px;
-                        text-align: center;
-                        padding: 5px;
-                        font-size: larger;
-                       
-                    }
-    
-                    td:first-child {
-                        border-right: 0px;
+        align-items: center;
+        justify-content: space-between;
+        .right-side{
+            .preview-table {
+                margin-bottom: 20px;
+                // border: 1px solid rgba(128, 128, 128, 0.363);
+                border-collapse: collapse;
+                margin-top: 10px;
+                max-width: 600px;
+                font-size: calc(13px + 0.5234vw);
+                display: flex;
+                flex-direction: column;
+                align-items: stretch ;
+                                
+                tbody {
+                    text-align: center;
+                    tr{
+                        td{
+                            border-right:2px solid rgba(128, 128, 128, 0.363) ;
+                            width: 150px;
+                            text-align: center;
+                            padding: 5px;
+                            font-size: larger;
+                           
+                        }
+        
+                        td:first-child {
+                            border-right: 0px;
+                        }
                     }
                 }
             }
         }
+        .left-side {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+        
     }
     
     .top-container {
