--- a/src/app/components/recipesComponents/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipesComponents/recipe-details/recipe-details.component.html
@@ -24,7 +24,7 @@
         <div class="left-side">
             <app-like-btn [recipeId]="recipeDetails['recipeId']" [userId]=""></app-like-btn>
             <!-- <app-paypal-qr></app-paypal-qr> -->
-            <app-paypal-btn *ngIf="recipeDetails['donationLink']" [donationLink]="recipeDetails['donationLink']"></app-paypal-btn>
+            <app-paypal-btn></app-paypal-btn>
         </div>
         
         
