--- a/src/app/components/navbarComponents/navbar/navbar.component.scss
+++ b/src/app/components/navbarComponents/navbar/navbar.component.scss
@@ -13,8 +13,6 @@ svg{
     fill:$textcolor
 }
 nav {
-    
-    
     background-color: $backgroundColor;
     position: fixed;
     z-index: 2;
@@ -192,7 +190,9 @@ nav {
         .right-member-nav {
             display: flex;
             flex-direction: row;
-            
+            li:first-child {
+                // margin-left: 20px;
+            }
             li{
                 list-style-type: none;
                 padding:5px;        
@@ -211,7 +211,9 @@ nav {
             }
         }
 
-        
+        .left-member-nav{
+
+        }
         
         
         
