--- a/src/app/components/recipesComponents/recipe-details/recipe-details.component.scss
+++ b/src/app/components/recipesComponents/recipe-details/recipe-details.component.scss
@@ -28,10 +28,8 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
         align-items: center;
         justify-content: space-between;
         .right-side{
-            
             .preview-table {
-
-                // margin-bottom: 20px;
+                margin-bottom: 20px;
                 // border: 1px solid rgba(128, 128, 128, 0.363);
                 border-collapse: collapse;
                 margin-top: 10px;
@@ -40,7 +38,6 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
                 display: flex;
                 flex-direction: column;
                 align-items: stretch ;
-            
                                 
                 tbody {
                     text-align: center;
